--- a/style.css
+++ b/style.css
@@ -236,7 +236,6 @@ img {
 .footer {
     text-align: center;
     padding: 10px 0;
-    position: sticky;
     bottom: 0;
     width: 100%;
 }
@@ -248,4 +247,55 @@ img {
 .selected {
     background-color: #333;
     border-radius: 10px;
+}
+.controller-info {
+    text-align: center;
+}
+.axis, .button {
+    margin: 10px 0;
+}
+.progress-bar {
+    width: 300px;
+}
+.stick-container {
+    position: relative;
+    width: 100px;
+    height: 100px;
+    border: 0.5px solid #cdd6df;
+    border-radius: 50%;
+    margin: 20px;
+}
+.stick {
+    position: absolute;
+    width: 7px;
+    height: 7px;
+    background-color: #053361;
+    border-radius: 50%;
+    transform: translate(-50%, -50%);
+}
+.stick-line {
+    position: absolute;
+    width: 1px;
+    background-color: #053361;
+    transform-origin: center top;
+    top: 50%;
+    left: 50%;
+}
+.sticks-container {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+.buttons-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+    gap: 10px;
+}
+.button {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.vibrate-button {
+    margin-top: 50px;
 }
